@@ -1,3 +1,3 @@
 [Service]
-ExecStart=mount --bind /mnt/wslg/runtime-dir /run/user/%i
-ExecStop=umount /run/user/%i
+ExecStart=/usr/libexec/genie/map-user-runtime-dir.sh %i
+ExecStop=/usr/libexec/genie/unmap-user-runtime-dir.sh %i
