@@ -29,6 +29,10 @@ package() {
   # Environment generator.
   install -Dm 0755 -o root "../othersrc/scripts/80-genie-envar.sh" -t "${pkgdir}/usr/libexec/genie"
 
+  # Runtime dir mapping
+	install -Dm 0755 -o root "othersrc/scripts/map-user-runtime-dir.sh" -t "${pkgdir}/usr/libexec/genie"
+	install -Dm 0755 -o root "othersrc/scripts/unmap-user-runtime-dir.sh" -t "${pkgdir}/usr/libexec/genie"
+
   # Configuration file.
   install -Dm 0644 -o root "../othersrc/etc/genie.ini" -t "${pkgdir}/etc"
 
