@@ -4,6 +4,7 @@ systemd-genie (1.40) buster bullseye bookworm sid focal bionic; urgency=medium
         * Upnumbered genie-envar to fix missing path cloning on some systems.
         * Fixed typo in wslg-xwayland.socket.
         * Map XWayland socket only where WSLg is present and active.
+        * Mount user runtime directory only where WSLg is present and user matches.
 
  -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 18:00:00 -0500
 
